Corrected title wrapping preference

--- a/src/main/resources/static/css/admin/node.css
+++ b/src/main/resources/static/css/admin/node.css
@@ -21,6 +21,7 @@
 }
 .locationTitle {
     grid-area: locationTitle;
+    white-space: nowrap;
 }
 .locationTheme {
     grid-area: locationTheme;
